about us to vnamese

--- a/project/templates/aboutus.html
+++ b/project/templates/aboutus.html
@@ -32,21 +32,21 @@
     {% include 'navbar.html' %}
     <div class="bodystyle">
       <div class="head1">
-        <h1>About Us</h1>
+        <h1>Về chúng tôi</h1>
       </div>
 
       <div>
         <div class="mainstyle">
           <!-- Including: Awareness, Mission & Vision, Founder -->
-          <h2 class="head2awareness">Awareness, Mission and Vision</h2>
+          <h2 class="head2awareness">Mục tiêu</h2>
         </div>
 
         {% include 'animation.html' %}
 
         <div class="mainstyle">
-          <h2 class="head2executive">Executive Board</h2>
+          <h2 class="head2executive">Ban điều hành</h2>
           {% include 'ourteam.html' %}
-          <h2 class="head2ourteam">The Story of Eco Smart Vietnam</h2>
+          <h2 class="head2ourteam">Câu chuyện của Eco Smart Vietnam</h2>
           <!-- Founder Content -->
           <div class="interview">
             <figure>
@@ -60,49 +60,64 @@
                 Founder of Eco Smart Vietnam - Mr Bui Dinh Tri
               </figcaption>
             </figure>
-            <hr class="aboutus-hr">
-            <p class = "statementfromTri">
-              Để hình thành và phát triển một dự án, sự đóng góp của tổng giám đốc là
-              vô cùng quan trọng. Hôm nay hãy cùng chúng tôi tìm hiểu về
-              người sáng lập ra Eco Smart Việt Nam - anh Bùi Đình Trí qua những thông tin
-              phỏng vấn dưới đây để hiểu thêm nhiều thông tin thú vị
+            <hr class="aboutus-hr" />
+            <p class="statementfromTri">
+              Để hình thành và phát triển một dự án, sự đóng góp của tổng giám
+              đốc là vô cùng quan trọng. Hôm nay hãy cùng chúng tôi tìm hiểu về
+              người sáng lập ra Eco Smart Việt Nam - anh Bùi Đình Trí qua những
+              thông tin phỏng vấn dưới đây để hiểu thêm nhiều thông tin thú vị
               về Eco Smart. Hãy bắt đầu nào!
             </p>
             <p class="question">
-              Câu 1: Giới thiệu và kể 3 điều thú vị về
-              bản thân anh.
+              Câu 1: Giới thiệu và kể 3 điều thú vị về bản thân anh.
             </p>
-            <p class = "answer">
-              Anh Trí: Hiện tại tôi đang là du học sinh học 2 chuyên ngành
-              Khoa học Máy tính và Kinh tế ở Mỹ. Ba điều thú vị
-              về tôi có lẽ là tôi thuận tay trái, liều lĩnh (nhưng
-              trong tầm kiểm soát) và lười học (nhưng vẫn học tốt).
-            </p>
-            <p class="question">
-              Câu 2: Anh Trí, cơ duyên nào đã đưa anh đến với việc thành lập
-              Eco Smart Việt Nam?
-            </p>
-            <p class ="answer">
-              Anh Trí: Cái duyên có lẽ bắt nguồn từ việc tôi tham gia một trong những
-              hoạt động thường niên của Trung tâm hỗ trợ khởi nghiệp dành cho doanh nhân và doanh nghiệp trẻ của trường tôi. Ban Khởi nghiệp và Đổi mới Sáng tạo của Macalester trao thưởng cho các bạn trẻ có ý tưởng, sáng kiến đặc biệt giúp cải thiện cuộc sống của cộng đồng xung quanh họ. Tôi đã may mắn giành được giải thưởng và Eco Smart Việt Nam là ý tưởng đã giúp tôi giành được giải thưởng đó (giải thưởng có tên ban đầu là Eco Heroes Campaign).
+            <p class="answer">
+              Anh Trí: Hiện tại tôi đang là du học sinh học 2 chuyên ngành Khoa
+              học Máy tính và Kinh tế ở Mỹ. Ba điều thú vị về tôi có lẽ là tôi
+              thuận tay trái, liều lĩnh (nhưng trong tầm kiểm soát) và lười học
+              (nhưng vẫn học tốt).
             </p>
             <p class="question">
-              Câu hỏi 3: Anh có thể chia sẻ một chút về mục tiêu và
-               kỳ vọng mà bạn đặt ra tại Eco Smart Việt Nam trong tương lai?
+              Câu 2: Anh Trí, cơ duyên nào đã đưa anh đến với việc thành lập Eco
+              Smart Việt Nam?
             </p>
-            <p class = "answer">
-              Anh Trí: Như tôi chia sẻ, tôi là người có máu liều lĩnh nhưng trong tầm kiểm soát, vì vậy mục tiêu và kỳ vọng của tôi thường cân bằng giữa những điều xa vời và thực tế. Tôi thực sự kỳ vọng Eco Smart Việt Nam sẽ trở thành một trong những tổ chức môi trường lớn nhất và chuyên nghiệp nhất ở khu vực miền Bắc. Tuy nhiên, trước mắt, Eco Smart chỉ cần lớn nhất ở trong Hà Nội thôi đã (chắc là lớn nhất trong Hà Nội là đứng thứ 2 hoặc thứ 3 toàn miền Bắc nhỉ?)
+            <p class="answer">
+              Anh Trí: Cái duyên có lẽ bắt nguồn từ việc tôi tham gia một trong
+              những hoạt động thường niên của Trung tâm hỗ trợ khởi nghiệp dành
+              cho doanh nhân và doanh nghiệp trẻ của trường tôi. Ban Khởi nghiệp
+              và Đổi mới Sáng tạo của Macalester trao thưởng cho các bạn trẻ có
+              ý tưởng, sáng kiến đặc biệt giúp cải thiện cuộc sống của cộng đồng
+              xung quanh họ. Tôi đã may mắn giành được giải thưởng và Eco Smart
+              Việt Nam là ý tưởng đã giúp tôi giành được giải thưởng đó (giải
+              thưởng có tên ban đầu là Eco Heroes Campaign).
             </p>
             <p class="question">
-              Câu hỏi 4: Anh có điều gì muốn nói với độc giả và những người theo dõi của dự án không?
+              Câu hỏi 3: Anh có thể chia sẻ một chút về mục tiêu và kỳ vọng mà
+              bạn đặt ra tại Eco Smart Việt Nam trong tương lai?
             </p>
-            <p class ="answer">
-              Anh Trí: Tôi chỉ muốn nói rằng Eco Smart Vietnam là một dự án
-              sẽ không mọi người phải thất vọng bởi vì với đội ngũ của Eco
-              Smart chúng tôi - những người mà tôi tin là đầy tài năng và
-              trách nhiệm - sẽ có thể giúp dự án phát triển và lan tỏa rộng rãi. Ngoài ra, chúng tôi cũng xin được cam kết là Eco Smart Việt Nam sẽ luôn nỗ lực hết mình để hoàn thành sứ mệnh mà chính chúng tôi đặt ra: Hành động vì sự phát triển và an toàn của môi trường Việt Nam!”
+            <p class="answer">
+              Anh Trí: Như tôi chia sẻ, tôi là người có máu liều lĩnh nhưng
+              trong tầm kiểm soát, vì vậy mục tiêu và kỳ vọng của tôi thường cân
+              bằng giữa những điều xa vời và thực tế. Tôi thực sự kỳ vọng Eco
+              Smart Việt Nam sẽ trở thành một trong những tổ chức môi trường lớn
+              nhất và chuyên nghiệp nhất ở khu vực miền Bắc. Tuy nhiên, trước
+              mắt, Eco Smart chỉ cần lớn nhất ở trong Hà Nội thôi đã (chắc là
+              lớn nhất trong Hà Nội là đứng thứ 2 hoặc thứ 3 toàn miền Bắc nhỉ?)
             </p>
-            <hr>
+            <p class="question">
+              Câu hỏi 4: Anh có điều gì muốn nói với độc giả và những người theo
+              dõi của dự án không?
+            </p>
+            <p class="answer">
+              Anh Trí: Tôi chỉ muốn nói rằng Eco Smart Vietnam là một dự án sẽ
+              không mọi người phải thất vọng bởi vì với đội ngũ của Eco Smart
+              chúng tôi - những người mà tôi tin là đầy tài năng và trách nhiệm
+              - sẽ có thể giúp dự án phát triển và lan tỏa rộng rãi. Ngoài ra,
+              chúng tôi cũng xin được cam kết là Eco Smart Việt Nam sẽ luôn nỗ
+              lực hết mình để hoàn thành sứ mệnh mà chính chúng tôi đặt ra: Hành
+              động vì sự phát triển và an toàn của môi trường Việt Nam!”
+            </p>
+            <hr />
           </div>
         </div>
       </div>
