--- a/project/templates/activities/activities.html
+++ b/project/templates/activities/activities.html
@@ -27,7 +27,7 @@
     {% include 'navbar.html' %}
     <div class="bodystyle">
       <div class="head1">
-        <h1>Activities</h1>
+        <h1>Hoạt Động</h1>
       </div>
     <div id="activities_news">
 
