--- a/project/templates/product.html
+++ b/project/templates/product.html
@@ -56,7 +56,7 @@
 
 {% include 'navbar.html' %}
     <div class="bodystyle">
-        <div class="head1"><h1>Products</h1></div>
+        <div class="head1"><h1>Sản Phẩm</h1></div>
 <div class="menu">
         
     <div class="product-items">
