--- a/project/static/css/activities_page.css
+++ b/project/static/css/activities_page.css
@@ -23,12 +23,13 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  background-color:  #E5D9B6;
+  background-color:  whitesmoke;
+  animation: pageLoading 2s;
 }  
 @media screen and (max-width: 1000px) {
   #activities_news .content_block{
     width: 90%;
-  }
+  }z
   .content_block .text1{
     font-size: 2.4vw;
   }
@@ -122,7 +123,16 @@ img{
 .page-number:hover{
   color: grey;
 }
-
+@keyframes pageLoading {
+  from {
+      opacity: 0;
+      transform: translateY(-10px);
+  }
+  to {
+      opacity: 1;
+      transform: translateY(0);
+  }
+}
 
 /* .loader-wrapper {
   width: 100%;
