--- a/project/templates/navbar.html
+++ b/project/templates/navbar.html
@@ -89,6 +89,11 @@
               </a>
             </li>
 
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="cart.html">Cart </a>
+            </li>
+
+
             <li class="nav-item" id="last-nav-item">
               <form class="search-container" action="">
                 <input class="input-box" type="text" required />
@@ -108,5 +113,18 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
+    <script>
+      // Get the current page URL
+const currentPageUrl = window.location.href;
+
+// Loop through all nav links and add the 'active' class to the one that matches the current page URL
+const navLinks = document.querySelectorAll('.nav-link');
+navLinks.forEach((link) => {
+  if (link.href === currentPageUrl) {
+    link.classList.add('active');
+  }
+});
+
+    </script>
   </body>
 </html>
