cart added to navbar

--- a/project/templates/navbar.html
+++ b/project/templates/navbar.html
@@ -90,7 +90,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="cart.html">Cart </a>
+              <a class="nav-link" aria-current="page" href="/product/cart/">Cart </a>
             </li>
 
 
