--- a/project/templates/sponsor.html
+++ b/project/templates/sponsor.html
@@ -14,14 +14,14 @@
     <div class="sponsors-showcase">
       <h2 class="h2ofsponsor">Đối tác của Eco Smart Vietnam</h2>
         <div class="sponsors">
-          <a href="#" target="_blank"><img src="{{ url_for('static', filename='img/sponsor/sponsor1-logo.jpg') }}" alt="Sponsor 1 Logo"></a>
-          <a href="#" target="_blank"><img src="{{ url_for('static', filename='img/sponsor/sponsor2-logo.jpg') }}" alt="Sponsor 2 Logo"></a>
-          <a href="#" target="_blank"><img src="{{ url_for('static', filename='img/sponsor/sponsor3-logo.jpg') }}" alt="Sponsor 3 Logo"></a>
-          <a href="#" target="_blank"><img src="{{ url_for('static', filename='img/sponsor/sponsor4-logo.jpg') }}" alt="Sponsor 4 Logo"></a>
-          <a href="#" target="_blank"><img src="{{ url_for('static', filename='img/sponsor/sponsor5-logo.jpg') }}" alt="Sponsor 5 Logo"></a>
-          <a href="#" target="_blank"><img src="{{ url_for('static', filename='img/sponsor/sponsor6-logo.jpg') }}" alt="Sponsor 6 Logo"></a>
-          <a href="#" target="_blank"><img src="{{ url_for('static', filename='img/sponsor/sponsor7-logo.jpg') }}" alt="Sponsor 7 Logo"></a>
-          <a href="#" target="_blank"><img src="{{ url_for('static', filename='img/sponsor/sponsor8-logo.jpg') }}" alt="Sponsor 8 Logo"></a>
+          <a href="#" target="_blank"><img src="{{ url_for('static', filename='img/sponsor/sponsor1-logo.png') }}" alt="Sponsor 1 Logo"></a>
+          <a href="#" target="_blank"><img src="{{ url_for('static', filename='img/sponsor/sponsor2-logo.png') }}" alt="Sponsor 2 Logo"></a>
+          <a href="#" target="_blank"><img src="{{ url_for('static', filename='img/sponsor/sponsor3-logo.png') }}" alt="Sponsor 3 Logo"></a>
+          <a href="#" target="_blank"><img src="{{ url_for('static', filename='img/sponsor/sponsor4-logo.png') }}" alt="Sponsor 4 Logo"></a>
+          <a href="#" target="_blank"><img src="{{ url_for('static', filename='img/sponsor/sponsor5-logo.png') }}" alt="Sponsor 5 Logo"></a>
+          <a href="#" target="_blank"><img src="{{ url_for('static', filename='img/sponsor/sponsor6-logo.png') }}" alt="Sponsor 6 Logo"></a>
+          <a href="#" target="_blank"><img src="{{ url_for('static', filename='img/sponsor/sponsor7-logo.png') }}" alt="Sponsor 7 Logo"></a>
+          <a href="#" target="_blank"><img src="{{ url_for('static', filename='img/sponsor/sponsor8-logo.png') }}" alt="Sponsor 8 Logo"></a>
         </div>
       </div>
 </body>
