--- a/project/templates/aboutus.html
+++ b/project/templates/aboutus.html
@@ -36,16 +36,23 @@
       </div>
 
       <div>
-        <div class="mainstyle">
+        <div class="mainstyle mainstyle-1">
           <!-- Including: Awareness, Mission & Vision, Founder -->
           <h2 class="head2awareness">Nhận thức, sứ mệnh và tầm nhìn</h2>
         </div>
 
         {% include 'animation.html' %}
 
-        <div class="mainstyle">
-          <h2 class="head2executive">Ban điều hành</h2>
-          {% include 'ourteam.html' %}
+        <hr class="hr-aboutus">
+        <div class="backgroundchange">
+          <div class="mainstyle mainstyle-2">
+            <h2 class="head2executive">Ban điều hành</h2>
+            {% include 'ourteam.html' %}
+          </div>
+        </div>
+        <div class="color-gap"><br><br><br><br></div>
+        <hr class="hr-aboutus2">
+        <div class="mainstyle mainstyle-3">
           <h2 class="head2ourteam">Câu chuyện của Eco Smart Việt Nam</h2>
           <!-- Founder Content -->
           <div class="interview">
@@ -60,7 +67,7 @@
                 Người sáng lập Eco Smart Việt Nam - Mr. Bùi Đình Trí
               </figcaption>
             </figure>
-            <hr class="aboutus-hr" />
+            <hr class="aboutus-hr"/>
             <p class="statementfromTri">
               Để hình thành và phát triển một dự án, sự đóng góp của tổng giám
               đốc là vô cùng quan trọng. Hôm nay hãy cùng chúng tôi tìm hiểu về
