--- a/project/static/css/aboutus.css
+++ b/project/static/css/aboutus.css
@@ -66,7 +66,7 @@ body {
     font-size: 4vh;
     font-weight: bolder;
     text-align: center;
-    color: #FCF5E5;
+    color: #285430;
 }
 .head2ourteam {
     margin-top: 50px;
