--- a/project/templates/product.html
+++ b/project/templates/product.html
@@ -64,10 +64,12 @@
             <img src="{{ url_for('static', filename='img/products/product_page_5.jpg') }}"alt=""></a>
         <div class="details">
             <div class="details-sub">
-                <h3 class="product-name"> Product 1</h3>
-                <h3 class="product-price">Price</h3>
+                <h3 class="product-name"> Dầu dưỡng Hoàng Lan</h3>
+                <h3 class="product-price">90.000 VND</h3>
             </div>
-            <p>Lorem, ipsum lorem dolor sit amet consectetur adipisicing elit.</p>
+            <p>▪️Hồng nhuận da, chống lão hoá, duy trì nét thanh xuân
+                ▪️Tăng sức đề kháng, bồi bổ sức khỏe, giúp ngủ ngon
+                ▪️Ích trí, bổ huyết, định thần</p>
             
             <div class="goshop" onclick="openPopup1()"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-cart3" viewBox="0 0 20 20">
                 <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
@@ -80,10 +82,12 @@
             <img src="{{ url_for('static', filename='img/products/product_page_4.jpg') }}" alt=""></a>
         <div class="details">
             <div class="details-sub">
-                <h3 class="product-name"> Product 2</h3>
-                <h3 class="product-price">Price</h3>
+                <h3 class="product-name"> Tinh dầu Hoắc hương </h3>
+                <h3 class="product-price">120.000 VND</h3>
             </div>
-            <p>Lorem, ipsum lorem dolor sit amet consectetur adipisicing elit.</p>
+            <p>▪️Hồng nhuận da, chống lão hoá, duy trì nét thanh xuân
+                ▪️Tăng sức đề kháng, bồi bổ sức khỏe, giúp ngủ ngon
+                ▪️Ích trí, bổ huyết, định thần</p>
             
             <div class="goshop" onclick="openPopup2()"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-cart3" viewBox="0 0 20 20">
                 <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
@@ -95,10 +99,12 @@
             <img src="{{ url_for('static', filename='img/products/product_page_3.jpg') }}" alt=""></a>
         <div class="details">
             <div class="details-sub">
-                <h3 class="product-name"> Product 3</h3>
-                <h3 class="product-price">Price</h3>
+                <h3 class="product-name">  Tinh dầu hoa hồng</h3>
+                <h3 class="product-price">100.000 VND</h3>
             </div>
-            <p>Lorem, ipsum lorem dolor sit amet consectetur adipisicing elit.</p>
+            <p>▪️Hồng nhuận da, chống lão hoá, duy trì nét thanh xuân
+                ▪️Tăng sức đề kháng, bồi bổ sức khỏe, giúp ngủ ngon
+                ▪️Ích trí, bổ huyết, định thần</p>
             
             <div class="goshop" onclick="openPopup3()"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-cart3" viewBox="0 0 20 20">
                 <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
@@ -110,10 +116,12 @@
             <img src="{{ url_for('static', filename='img/products/product_page_2.jpg') }}"alt=""></a>
         <div class="details">
             <div class="details-sub">
-                <h3 class="product-name"> Product 4</h3>
-                <h3 class="product-price">Price</h3>
+                <h3 class="product-name"> Green Tea</h3>
+                <h3 class="product-price">70.00 VND</h3>
             </div>
-            <p>Lorem, ipsum lorem dolor sit amet consectetur adipisicing elit.</p>
+            <p>▪️Hồng nhuận da, chống lão hoá, duy trì nét thanh xuân
+                ▪️Tăng sức đề kháng, bồi bổ sức khỏe, giúp ngủ ngon
+                ▪️Ích trí, bổ huyết, định thần</p>
             
             <div class="goshop" onclick="openPopup4()"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-cart3" viewBox="0 0 20 20">
                 <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
@@ -125,10 +133,13 @@
             <img src="{{ url_for('static', filename='img/products/product_page_1.jpg') }}"alt=""></a>
         <div class="details">
             <div class="details-sub">
-                <h3 class="product-name"> Product 5</h3>
-                <h3 class="product-price">Price</h3>
+                <h3 class="product-name"> Dark Chocolate Cinnemon</h3>
+                <h3 class="product-price">50.000 VnD</h3>
             </div>
-            <p>Lorem, ipsum lorem dolor sit amet consectetur adipisicing elit.</p>
+            <p>▪️Hồng nhuận da, chống lão hoá, duy trì nét thanh xuân
+                ▪️Tăng sức đề kháng, bồi bổ sức khỏe, giúp ngủ ngon
+                ▪️Ích trí, bổ huyết, định thần
+                ▪️Làm tăng chức năng não bộ, giúp phục hồi trí nhớ đang sút giảm</p>
             
             <div class="goshop" onclick="openPopup5()"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-cart3" viewBox="0 0 20 20">
                 <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
@@ -139,7 +150,7 @@
 </div>
 <div>
     <div class="pop-up" id="popup1">
-        <div class="pop-up-product-name"> Product 1</div> 
+        <div class="pop-up-product-name"> Dầu dưỡng Hoàng Lan</div> 
         <svg class="close-pop-up"  onclick="closePopup1()" xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
             <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z"/>
         </svg>
@@ -147,10 +158,14 @@
         <img src="{{ url_for('static', filename='img/products/product_page_5.jpg') }}"alt="">
         <div class="pop-up-details-sub">
             
-            <h3 class="pop-up-product-sub-name"> Product 1</h3>
-            <h3 class="pop-upproduct-price">Price</h3>
+            <h3 class="pop-up-product-sub-name">Dầu dưỡng Hoàng Lan</h3>
+            <h3 class="pop-upproduct-price">90.000 VND</h3>
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipi Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus harum nulla fugiat temporibus rem ex laboriosam dolores architecto? Iusto, voluptatem? Repellendus deserunt asperiores, reiciendis amet velit veritatis nostrum sed! Dolorum!</p>
+        <p>🌿 Những ngày dài ẩm ướt buồn phiền đang đi qua, có chậm nhưng chắc chắn đang qua,
+            Và rồi thế giới sẽ trở lại xinh đẹp, dễ chịu và thân quen như cũ.
+            🌸 Lá Mây set hũ Sâm gừng mật ong này, dành cho bạn, để hồng nhuận làn da, chống lão hóa, bồi bổ sức khỏe,
+            Để chăm sóc, nuông chiều và yêu thương bản thân,
+            Trong cuộc sống đang cuốn trôi về phía trước, chưa rõ hình hài, với rất nhiều dự tính âu lo. </p>
         <div class="pop-up-contact-cart">
                 <svg class="pop-up-contact" xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-chat-dots" viewBox="0 0 16 16">
                     <path d="M5 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
@@ -163,7 +178,7 @@
     </div> 
 
     <div class="pop-up" id="popup2">
-        <div class="pop-up-product-name"> Product 2</div> 
+        <div class="pop-up-product-name"> Tinh dầu Hoắc hương</div> 
         <svg class="close-pop-up"  onclick="closePopup2()" xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
             <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z"/>
         </svg>
@@ -171,10 +186,14 @@
         <img src="{{ url_for('static', filename='img/products/product_page_4.jpg') }}" alt="">
         <div class="pop-up-details-sub">
             
-            <h3 class="pop-up-product-sub-name"> Product 2</h3>
-            <h3 class="pop-upproduct-price">Price</h3>
+            <h3 class="pop-up-product-sub-name"> Tinh dầu Hoắc hương</h3>
+            <h3 class="pop-upproduct-price">120.000 VND</h3>
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipi Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus harum nulla fugiat temporibus rem ex laboriosam dolores architecto? Iusto, voluptatem? Repellendus deserunt asperiores, reiciendis amet velit veritatis nostrum sed! Dolorum!</p>
+        <p>🌿 Những ngày dài ẩm ướt buồn phiền đang đi qua, có chậm nhưng chắc chắn đang qua,
+            Và rồi thế giới sẽ trở lại xinh đẹp, dễ chịu và thân quen như cũ.
+            🌸 Lá Mây set hũ Sâm gừng mật ong này, dành cho bạn, để hồng nhuận làn da, chống lão hóa, bồi bổ sức khỏe,
+            Để chăm sóc, nuông chiều và yêu thương bản thân,
+            Trong cuộc sống đang cuốn trôi về phía trước, chưa rõ hình hài, với rất nhiều dự tính âu lo.</p>
         <div class="pop-up-contact-cart">
             <svg class="pop-up-contact" xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-chat-dots" viewBox="0 0 16 16">
                 <path d="M5 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
@@ -187,7 +206,7 @@
     </div> 
 
     <div class="pop-up" id="popup3">
-        <div class="pop-up-product-name"> Product 3</div> 
+        <div class="pop-up-product-name">Tinh dầu hoa hồng</div> 
         <svg class="close-pop-up"  onclick="closePopup3()" xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
             <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z"/>
         </svg>
@@ -195,10 +214,14 @@
         <img src="{{ url_for('static', filename='img/products/product_page_3.jpg') }}"alt="">
         <div class="pop-up-details-sub">
             
-            <h3 class="pop-up-product-sub-name"> Product 3</h3>
-            <h3 class="pop-upproduct-price">Price</h3>
+            <h3 class="pop-up-product-sub-name"> Tinh dầu hoa hồng</h3>
+            <h3 class="pop-upproduct-price">100.000 VND</h3>
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipi Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus harum nulla fugiat temporibus rem ex laboriosam dolores architecto? Iusto, voluptatem? Repellendus deserunt asperiores, reiciendis amet velit veritatis nostrum sed! Dolorum!</p>
+        <p>🌿 Những ngày dài ẩm ướt buồn phiền đang đi qua, có chậm nhưng chắc chắn đang qua,
+            Và rồi thế giới sẽ trở lại xinh đẹp, dễ chịu và thân quen như cũ.
+            🌸 Lá Mây set hũ Sâm gừng mật ong này, dành cho bạn, để hồng nhuận làn da, chống lão hóa, bồi bổ sức khỏe,
+            Để chăm sóc, nuông chiều và yêu thương bản thân,
+            Trong cuộc sống đang cuốn trôi về phía trước, chưa rõ hình hài, với rất nhiều dự tính âu lo.</p>
         <div class="pop-up-contact-cart">
             <svg class="pop-up-contact" xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-chat-dots" viewBox="0 0 16 16">
                 <path d="M5 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
@@ -210,7 +233,7 @@
     </div>
     </div>
     <div class="pop-up" id="popup4">
-        <div class="pop-up-product-name"> Product 4</div> 
+        <div class="pop-up-product-name">Green Tea</div> 
         <svg class="close-pop-up"  onclick="closePopup4()"xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
             <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z"/>
         </svg>
@@ -218,10 +241,14 @@
         <img src="{{ url_for('static', filename='img/products/product_page_2.jpg') }}" alt="">
         <div class="pop-up-details-sub">
             
-            <h3 class="pop-up-product-sub-name"> Product 4</h3>
-            <h3 class="pop-upproduct-price">Price</h3>
+            <h3 class="pop-up-product-sub-name"> Green Tea</h3>
+            <h3 class="pop-upproduct-price">70.00 VND</h3>
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipi Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus harum nulla fugiat temporibus rem ex laboriosam dolores architecto? Iusto, voluptatem? Repellendus deserunt asperiores, reiciendis amet velit veritatis nostrum sed! Dolorum!</p>
+        <p>🌿 Những ngày dài ẩm ướt buồn phiền đang đi qua, có chậm nhưng chắc chắn đang qua,
+            Và rồi thế giới sẽ trở lại xinh đẹp, dễ chịu và thân quen như cũ.
+            🌸 Lá Mây set hũ Sâm gừng mật ong này, dành cho bạn, để hồng nhuận làn da, chống lão hóa, bồi bổ sức khỏe,
+            Để chăm sóc, nuông chiều và yêu thương bản thân,
+            Trong cuộc sống đang cuốn trôi về phía trước, chưa rõ hình hài, với rất nhiều dự tính âu lo.</p>
         <div class="pop-up-contact-cart">
             <svg class="pop-up-contact" xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-chat-dots" viewBox="0 0 16 16">
                 <path d="M5 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
@@ -233,7 +260,7 @@
     </div>
     </div>
     <div class="pop-up" id="popup5">
-        <div class="pop-up-product-name"> Product 5</div> 
+        <div class="pop-up-product-name"> Dark Chocolate Cinnemon</div> 
         <svg class="close-pop-up"  onclick="closePopup5()"xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
             <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z"/>
         </svg>
@@ -241,10 +268,14 @@
         <img src="{{ url_for('static', filename='img/products/product_page_1.jpg') }}" alt="">
         <div class="pop-up-details-sub">
             
-            <h3 class="pop-up-product-sub-name"> Product 5</h3>
-            <h3 class="pop-upproduct-price">Price</h3>
+            <h3 class="pop-up-product-sub-name"> Dark Chocolate Cinnemon</h3>
+            <h3 class="pop-upproduct-price">50.000 VND</h3>
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipi Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus harum nulla fugiat temporibus rem ex laboriosam dolores architecto? Iusto, voluptatem? Repellendus deserunt asperiores, reiciendis amet velit veritatis nostrum sed! Dolorum!</p>
+        <p>🌿 Những ngày dài ẩm ướt buồn phiền đang đi qua, có chậm nhưng chắc chắn đang qua,
+            Và rồi thế giới sẽ trở lại xinh đẹp, dễ chịu và thân quen như cũ.
+            🌸 Lá Mây set hũ Sâm gừng mật ong này, dành cho bạn, để hồng nhuận làn da, chống lão hóa, bồi bổ sức khỏe,
+            Để chăm sóc, nuông chiều và yêu thương bản thân,
+            Trong cuộc sống đang cuốn trôi về phía trước, chưa rõ hình hài, với rất nhiều dự tính âu lo.</p>
         <div class="pop-up-contact-cart">
             <svg class="pop-up-contact" xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-chat-dots" viewBox="0 0 16 16">
                 <path d="M5 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
